[MSS-573] Fix footer input color on mobile view.

--- a/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
+++ b/oliviaburton_redesign/cartridges/app_custom_ob_redesign/cartridge/client/default/scss/components/_footer.scss
@@ -259,7 +259,7 @@
     
                     .input-group {
                         width: rem(300);
-                        background-color: $white;
+                        background-color: inherit;
 
                         @include media-breakpoint-down(lg) {
                             width: rem(260);
